# book_recommender

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
book_recommender/: config.py  models.py  recommender.py
src/: config.py  recommender.py
tests/: test_recommender.py
